--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,16 @@
   <head>
     <title><%= h(yield(:title) || "Untitled") %></title>
     <%= stylesheet_link_tag 'application' %>
+    
+    <%= javascript_include_tag "jquery-1.3.1.min" %>
+    <%= javascript_include_tag "jquery.livequery" %>
+    <%= javascript_include_tag "jquery.blockui" %>
+    <%= javascript_include_tag "jquery.tablesorter.min" %>
+    <%= javascript_include_tag "jquery.curvycorners.min" %>
+    
+    <%= javascript_include_tag "application" %>
+    <%= javascript_tag "var AUTH_TOKEN = #{form_authenticity_token.inspect};" if protect_against_forgery? %>
+
     <%= yield(:head) %>
   </head>
   <body>
@@ -18,5 +28,12 @@
       
       <%= yield %>
     </div>
+    
+    <div id="modal_window">
+        <div id="inner_content">
+        <!-- window for popups -->
+        </div>
+    </div>
+    
   </body>
 </html>
