--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -5,7 +5,7 @@
 <% form_for @user do |f| %>
   <%= f.error_messages %>
   <p>
-    <%= f.label :username %><br />
+    <%= f.label :username, "Squadron Number" %><br />
     <%= f.text_field :username %>
   </p>
   <p>
@@ -19,6 +19,10 @@
   <p>
     <%= f.label :password_confirmation, "Confirm Password" %><br />
     <%= f.password_field :password_confirmation %>
+  </p>
+  <p>
+    <%= f.label :amount_per_month, "Subscriptions amount per Month" %><br />
+    <%= f.text_field :amount_per_month %>
   </p>
   <p><%= f.submit "Sign up" %></p>
 <% end %>
