--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,14 +2,18 @@
   "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html>
   <head>
-    <title><%= h(yield(:title) || "Untitled") %></title>
+    <title>Inspectr<%=h " - " << yield(:title) %></title>
     <%= stylesheet_link_tag 'application' %>
+    <%= stylesheet_link_tag 'http://jqueryui.com/latest/themes/base/ui.all.css' %>
     
     <%= javascript_include_tag "jquery-1.3.1.min" %>
     <%= javascript_include_tag "jquery.livequery" %>
     <%= javascript_include_tag "jquery.blockui" %>
     <%= javascript_include_tag "jquery.tablesorter.min" %>
     <%= javascript_include_tag "jquery.curvycorners.min" %>
+    <%= javascript_include_tag "http://jqueryui.com/latest/ui/ui.core.js" %>
+    <%= javascript_include_tag "http://jqueryui.com/latest/ui/ui.tabs.js" %>
+    
     
     <%= javascript_include_tag "application" %>
     <%= javascript_tag "var AUTH_TOKEN = #{form_authenticity_token.inspect};" if protect_against_forgery? %>
@@ -18,14 +22,24 @@
   </head>
   <body>
     <div id="container">
-      <%- flash.each do |name, msg| -%>
-        <%= content_tag :div, msg, :id => "flash_#{name}" %>
-      <%- end -%>
       
       <%- if show_title? -%>
-        <h1><%=h yield(:title) %></h1>
+        <h1>Inspect<span>r</span></h1>
+        <h2><%=h yield(:title) %></h2>
       <%- end -%>
       
+      <%- if logged_in? %>
+      <ul id="admin_links">
+        <li><a href="/logout/">Logout</a></li>
+        <li><%= link_to "New Cadet", new_cadet_path, :class => "popup" %></li>
+        <li> <%= current_user.username %> Sqn</li>
+      </ul>
+      <%- end %>
+      
+      <%- flash.each do |name, msg| -%>
+          <%= content_tag :div, msg, :id => "flash_#{name}" %>
+      <%- end -%>
+        
       <%= yield %>
     </div>
     
