--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -1,41 +1,43 @@
-#modal_window{
-    position:relative;
-    display:none;
-    z-index:1000;
-    padding:30px;
-}
-
-tr.standing_order {
-  background-color: #CFC;
-  border: solid 1px #6C6;
-}
-
-tr.discharged {
-  background-color: #FCC;
-  border: solid 1px #C66;
-}
-
-table img {
-	width: 1.5em;
-	height: 1.5em;
-}
-
-/*------------------------------------------*/
 
 body {
-  background-color: #4B7399;
+  background-color: #1E4D84;
   font-family: Verdana, Helvetica, Arial;
   font-size: 14px;
 }
 
+p {
+	font-size: 11px;
+}
 a img {
   border: none;
 }
 
 a {
-  color: #0000FF;
+  color: #1E4D84;
+  text-decoration: none;
 }
 
+a:hover {
+	text-decoration: underline;
+}
+
+h1 {
+	text-align: center;
+	color: #1E4D84;
+	padding-bottom: 0;
+	margin-bottom: 0;
+}
+h1 span {
+	color: #C62E34;
+}
+
+h2 {
+	color: #858585;
+	text-align: right;
+	font-weight: lighter;
+	padding: 0;
+	margin: 0;
+}
 .clear {
   clear: both;
   height: 0;
@@ -45,12 +47,129 @@ a {
 #container {
   width: 75%;
   margin: 0 auto;
-  background-color: #FFF;
+  background: #FFF url('../images/logo2.png') no-repeat 50% 50%;
   padding: 20px 40px;
   border: solid 1px black;
   margin-top: 20px;
 }
+#admin_links {
+	text-align: right;
+	padding: 0;
+}
+#admin_links li {
+		padding: 4px;
+		list-style: none;
+		display: inline;
+		font-size: 11px;
+}
 
+/*-----Popup edit window--------------------*/
+
+#modal_window {
+    position:relative;
+    display:none;
+    z-index:1000;
+    padding:20px;
+}
+
+#modal_window #container {
+	background-image: none;
+}
+
+#modal_window h1 {
+	display: none;
+}
+
+#modal_window p {
+	text-align: center;
+	size: 14px;
+}
+/*---------Tabs & navigation styles---------*/
+
+.ui-tabs .ui-tabs-hide {
+     display: none;
+}
+/*----------Tables -----------------------*/
+
+table.tablesorter {
+	background-color: #CDCDCD;
+	margin:5px 0pt 5px;
+	width: 100%;
+	text-align: center;
+}
+table.tablesorter thead tr th, table.tablesorter tfoot tr th {
+	background-color: #e6EEEE;
+	border: 1px solid #FFF;
+	font-size: 8pt;
+	padding: 2px;
+}
+table.tablesorter thead tr .header {
+	cursor: pointer;
+}
+table.tablesorter tbody td {
+	color: #3D3D3D;
+	padding: 4px;
+	background-color: #FFF;
+	vertical-align: middle;
+}
+
+table.tablesorter tbody tr.discharged td{
+	background-color: #FCC;
+}
+
+table img {
+	width: 1.5em;
+	height: 1.5em;
+}
+
+table.tablesorter tbody td.low_score {
+	background-color: #FCC;
+	border: solid 1px #C66;
+}
+
+/*---------Welcome/Login page --------------*/
+#login_box {
+  position: absolute;
+  right: 5px;
+  padding: 0px;
+  width: 250px;
+  margin: 20px;
+  background-color: #CFC;
+  border: solid 1px #6C6;
+	text-align: center;
+}
+
+#login_box p {
+  font-size: 14px;
+}
+#login_box form label {
+	font-size: 9px;
+	padding-bottom: 0;
+}
+#login_box form input {
+	padding-top: 0;
+	font-size: 1.5em;
+	width: 7em;
+	text-align: center;
+}
+#login_box h4 {
+	text-decoration: underline;
+}
+
+#welcome_box {
+  margin-left: 0px;
+  padding: 0px;
+  margin-right: 300px;
+  float: right;
+}
+
+#welcome_box h3 {
+	color: #474847;
+	width: 100%;
+	border-bottom: #D1D1D1 1px solid;
+}
+
+/*------Flast Notices & errors----------*/
 #flash_notice, #flash_error {
   padding: 5px 8px;
   margin: 10px 0;
