--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
     
     <%= javascript_include_tag "jquery-1.3.1.min" %>
     <%= javascript_include_tag "jquery.livequery" %>
-    <%= javascript_include_tag "jquery.blockui" %>
+    <!--<%= javascript_include_tag "jquery.blockui" %>-->
     <%= javascript_include_tag "jquery.tablesorter.min" %>
     <%= javascript_include_tag "jquery.curvycorners.min" %>
     <%= javascript_include_tag "http://jqueryui.com/latest/ui/ui.core.js" %>
