fixed up readme and rails version

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -21,7 +21,7 @@
       </p>
       <p>
         <%= f.label :amount_per_month, "Subscriptions amount per Month" %><br />
-        <%= f.text_field :amount_per_month %>
+        £<%= f.text_field :amount_per_month %>
       </p>
       <p><%= f.submit "Sign up", :class => "submit" %></p>
     <% end %>
